background image slideshow complete

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <span>- Steve Jobs</span>
         <button type="button">Buy Now</button>
       </div>
+
+      <!-- SlideShow -->
+      <div class="slideshow"></div>
     </section>
   </div>
 
