--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
         <a href="#" class="navbar-link">AirPods</a>
       </nav>
 
+      <!-- Cube - Iphone Box -->
+      <div class="cube-wrapper">
+        <div class="cube">
+          <div class="front-side">
+            <img src="images/iphone.png" alt="">
+          </div>
+          <div class="back-side center">
+            <i class="fab fa-apple"></i>
+          </div>
+        </div>
+      </div>
+
       <!-- Banner -->
       <div class="section-1-banner center">
         <h1>&#8592; Best Gift</h1>
