--- a/index.html
+++ b/index.html
@@ -35,6 +35,27 @@
             <i class="fab fa-apple"></i>
           </div>
         </div>
+        <!-- Controls -->
+        <div class="controls">
+          <a href="">
+            <i class="fas fa-arrow-up top-x-control"></i>
+          </a>
+          <a href="">
+            <i class="fas fa-arrow-down bottom-x-control"></i>
+          </a>
+          <a href="">
+            <i class="fas fa-arrow-left left-y-control"></i>
+          </a>
+          <a href="">
+            <i class="fas fa-arrow-right right-y-control"></i>
+          </a>
+          <a href="">
+            <i class="fas fa-arrow-down top-z-control"></i>
+          </a>
+          <a href="">
+            <i class="fas fa-arrow-up bottom-z-control"></i>
+          </a>
+        </div>
       </div>
 
       <!-- Banner -->
