section 2 html and css done

--- a/index.html
+++ b/index.html
@@ -69,6 +69,26 @@
       <!-- SlideShow -->
       <div class="slideshow"></div>
     </section>
+
+    <!-- Section 2 -->
+    <section class="section-2">
+      <!-- Section 2 heading -->
+      <h1 class="section-2-heading">iPhone 12</h1>
+      <!-- Section 2 images -->
+      <div class="iphones">
+        <img src="images/iPhone 12/iphones-1-img.png" class="iphone-img-1" alt="">
+        <img src="images/iPhone 12/iphones-2-img.png" class="iphone-img-2" alt="">
+      </div>
+      <!-- Section 2 buttons -->
+      <div class="iphone-btns">
+        <a href="#" class="iphone-btn center">
+          <span>Learn More</span>
+        </a>
+        <a href="#" class="iphone-btn center">
+          <span>Shop</span>
+        </a>
+      </div>
+    </section>
   </div>
 
   <script src="app.js"></script>
