--- a/index.html
+++ b/index.html
@@ -115,6 +115,16 @@
       </div>
     </section>
     <!-- End of Section 3 -->
+
+    <!-- Section 4 -->
+    <section class="section-4">
+      <div class="watches">
+        <div class="watch-bands">
+          <img src="images/watches/watch-band-1.jpg" alt="">
+        </div>
+      </div>
+    </section>
+    <!-- End of Section 4 -->
   </div>
 
   <script src="app.js"></script>
